hphp/hack/test/typecheck/strict_value_equality/not_prims.php.like_types.exp
File "not_prims.php", line 12, characters 3-35:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "not_prims.php", line 7, characters 3-13:
  This is a dynamic value or an object of type vec<A<int>> because it is an unenforceable type
  File "not_prims.php", line 8, characters 3-13:
  This is a dynamic value or an object of type vec<A<int>> because it is an unenforceable type
File "not_prims.php", line 13, characters 3-27:
The arguments to this value equality test are not the same types or are not the allowed types (int, bool, float, string, vec, keyset, dict). The behavior for this test is changing and will soon either be universally false or throw an exception. (Typing[4443])
  File "not_prims.php", line 9, characters 3-8:
  This is a dynamic value or an object of type A<int> because it is an unenforceable type
  File "not_prims.php", line 10, characters 3-8:
  This is a dynamic value or an object of type A<int> because it is an unenforceable type
